# ClearMap

./: .gitattributes  .gitignore  .gitmodules  CITATION  CODEOFCONDUCT.md  CONTRIBUTE.md  ClearMap.yml  ClearMap3.yml  ClearMap3pip.yml  ClearMapM1.yml  ClearMapUi.yml  ClearMapUi311.yml  ClearMapUi39.yml  ClearMapUiBasic.yml  ClearMap_stable.yml  LICENSE.txt  README.md  build_ext_custom.py  install_gui.sh  install_gui39.sh  pyproject.toml  setup.py  start_gui.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
ClearMap/: Compile.py  Environment.py  Settings.py  TubeMap.py  __init__.py
ClearMap/Alignment/: Annotation.py  Elastix.py  README.rst  Resampling.py  Transformation.py  __init__.py  orientation.py  utils.py
ClearMap/Analysis/: DimensionReduction.py  __init__.py
ClearMap/Flow/: test.pyx
ClearMap/IO/: CSV.py  FileList.py  FileUtils.py  GT.py  IO.py  MHD.py  MMP.py  NPY.py  NRRD.py  SMA.py  Slice.py  Source.py  TIF.py  Temporary.py  Workspace.py  __init__.py  assets_constants.py  assets_specs.py  elastix_config.py  metadata.py  workspace2.py  workspace_asset.py
ClearMap/ImageProcessing/: GreyReconstruction.py  IlastikClassification.py  IlluminationCorrection.py  LightsheetCorrection.py  LocalStatistics.py  __init__.py  grey_reconstruction.py
ClearMap/ParallelProcessing/: Block.py  BlockProcessing.py  ParallelTraceback.py  ProcessWriter.py  SharedMemoryArray.py  SharedMemoryManager.py  __init__.py
ClearMap/Resources/: align_channels_affine.txt
ClearMap/Scripts/: CellMap.ipynb  CellMap.py  TubeMap.ipynb  TubeMap.py  __init__.py  align_new_api.py  average_pval_cm2.py  batch_cell_map.py  batch_process.py  cell_detection.py  cell_map.py  cell_map_new_api.py  cell_map_tutorial.ipynb  clearmap-utils.py  clearmap_utils.py  create_distance_file.py  custom_cells.py  developer_cellmap.ipynb  generate_jsonl_file_ontology.py  group_statistics.py  partial_gt_load_demo.py  sample_preparation.py  script_average_pval_vasc.py  streamlined_flow.py  total_length_and_basic_stats.py  tract_map.py  tube_map.py  tube_map_new_api.py  vasculature_stats_scripts.py
ClearMap/Tests/: Files.py  __init__.py
ClearMap/Utils/: Formatting.py  HierarchicalDict.py  Lazy.py  RegularExpression.py  Sound.py  TagExpression.py  Timer.py  __init__.py  array_utils.py  array_utils.pyxbld  array_utils_cy.pyx  event_bus.py  events.py  exceptions.py  (+4 more)
(+586 files in other folders)
